# WiresharkWithVASTandCope

./: .gitignore  CMakeListsCustom.txt  README.md  config.h.in  configure  version.conf
docbook/: Makefile.in
epan/: Makefile.in
packaging/macosx/: Info.plist
plugins/: Custom.m4  Custom.make
plugins/codecs/l16_mono/: Makefile.in
plugins/cope/: Makefile.am
plugins/cope/.deps/: foo_la-packet-foo.Plo
plugins/epan/cope/: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README  moduleinfo.h  packet-cope.c  plugin.c
plugins/epan/cope/.deps/: cope_la-packet-cope.Plo  cope_la-plugin.Plo  foo_la-plugin.Plo
plugins/epan/mate/: mate_parser.c
plugins/epan/vast/: CMakeLists.txt  Makefile.am  packet-vast.c
ui/: Makefile.in
ui/qt/: Makefile.in
wiretap/: Makefile.in
